--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
-PORT=
-DB_HOST=
-DB_PORT=
-DB_USER=
-DB_PASS=
-DB_NAME=
+APP_PORT=3333
+
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=tododb
