--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,13 @@ services:
     restart: always
     env_file:
       - .env
-    environment:
-      - POSTGRES_USER=${DATABASE_USER}
-      - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
-      - POSTGRES_DB=${DB_NAME}
     container_name: yoda-pay-api-db
-    # volumes:
-    #   - ./pgdata:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+    volumes:
+      - ./pgdata:/var/lib/postgresql/data
   api:
     build:
       context: .
@@ -20,24 +20,14 @@ services:
     image: yoda-pay-api:latest
     env_file:
       - .env
-    environment:
-      - DB_TYPE=${DB_TYPE}
-      - POSTGRES_HOST=${POSTGRES_HOST}
-      - POSTGRES_USER=${DATABASE_USER}
-      - POSTGRES_PASS=${DATABASE_PASSWORD}
-      - POSTGRES_DB=${DB_NAME}
-      - POSTGRES_SYNC=false
-      - JWT_SECRET=${JWT_SECRET}
-      - POSTGRES_PORT=${POSTGRES_PORT}
-      - APP_EXPIRES=${APP_EXPIRES}
-      - APP_PORT=${APP_PORT}
     ports:
-      - '3000:3000'
+      - ${APP_PORT}:${APP_PORT}
     container_name: yoda-pay-api
     depends_on:
       - db
     volumes:
       - .:/app
-      - /app/node_modules
-# volumes:
-#   pgdata:
+      - nodemodules:/app/node_modules
+volumes:
+  pgdata:
+  nodemodules:
