--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       - db
     volumes:
       - .:/app
-      - nodemodules:/app/node_modules
+      # - nodemodules:/app/node_modules
 volumes:
   pgdata:
-  nodemodules:
+  # nodemodules:
